--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-loader": "^8.2.4",
@@ -65,6 +66,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.5.3",
     "classnames": "^2.3.1",
-    "d3-timer": "^3.0.1"
+    "d3-timer": "^3.0.1",
+    "react-modal": "^3.15.1"
   }
 }
