--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/d3-timer": "^3.0.0",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -67,6 +68,7 @@
     "@mui/material": "^5.5.3",
     "classnames": "^2.3.1",
     "d3-timer": "^3.0.1",
+    "lodash": "^4.17.21",
     "react-modal": "^3.15.1"
   }
 }
