--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "classnames": "^2.3.1",
     "d3-timer": "^3.0.1",
     "lodash": "^4.17.21",
-    "react-modal": "^3.15.1"
+    "react-modal": "^3.15.1",
+    "react-tooltip": "^4.2.21"
   }
 }
