--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpack-spritesmith": "^1.1.0"
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
