--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "d3-timer": "^3.0.1",
     "lodash": "^4.17.21",
     "react-modal": "^3.15.1",
-    "react-tooltip": "^4.2.21"
+    "react-tooltip": "^4.2.21",
+    "recoil": "^0.7.5"
   }
 }
