--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "webpack-spritesmith": "^1.1.0"
   },
   "dependencies": {
+    "@dhmk/zustand-lens": "^2.0.5",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
