Completed Zustand integration and migration
 - All contexts converted to slices using the zustand-lens library.
 - Some code tidying
 - Switched to ts-loader which blocks builds when Typescript compiler fails.
 - Fixed some major bugs related to loading a save with prestige upgrades.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
+    "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -17,8 +17,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "sourceMap": true
   },
   "include": [
     "src"
