--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/react-modal": "^3.13.1",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-loader": "^8.2.4",
@@ -53,6 +54,7 @@
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
@@ -61,6 +63,7 @@
     "webpack-spritesmith": "^1.1.0"
   },
   "dependencies": {
+    "@dhmk/zustand-lens": "^2.0.5",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
@@ -72,6 +75,7 @@
     "d3-timer": "^3.0.1",
     "lodash": "^4.17.21",
     "react-modal": "^3.15.1",
-    "react-tooltip": "^4.2.21"
+    "react-tooltip": "^4.2.21",
+    "zustand": "^4.1.1"
   }
 }
