--- a/package.json
+++ b/package.json
@@ -71,11 +71,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.5.3",
+    "@types/styled-components": "^5.1.26",
     "classnames": "^2.3.1",
     "d3-timer": "^3.0.1",
     "lodash": "^4.17.21",
     "react-modal": "^3.15.1",
     "react-tooltip": "^4.2.21",
+    "styled-components": "^5.3.6",
     "zustand": "^4.1.1"
   }
 }
