--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@dhmk/zustand-lens": "^2.0.5",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@floating-ui/react": "^0.24.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
